DynamicModel: avoid untranslatable strings

However, "AND" and "OR" in search queries are still untranslatable
(because they wouldn't work otherwise). This is at least documented in
code.

BUG: 276023
FIXED-IN: 2:7